<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/forget_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <include layout="@layout/actionbar" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/login_logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_age"
                android:layout_marginRight="@dimen/login_age"
                android:layout_marginTop="@dimen/login_age"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <LinearLayout style="@style/forget_item_layout">

                    <ImageView
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/forget_phone" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/icon_line_vertical" />

                    <EditText
                        android:id="@+id/forget_phone"
                        android:hint="@string/login_phone"
                        android:inputType="phone"
                        style="@style/forget_edit" />

                </LinearLayout>

                <LinearLayout style="@style/forget_item_layout">

                    <ImageView
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/forget_code" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/icon_line_vertical" />

                    <EditText
                        android:id="@+id/forget_code"
                        android:hint="@string/register_code"
                        android:inputType="number"
                        style="@style/forget_edit" />

                    <TextView
                        android:id="@+id/forget_getCode"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/forget_code_bg"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/register_getCode"
                        android:textColor="@color/gray5"
                        android:textSize="@dimen/login_text" />
                </LinearLayout>


                <LinearLayout style="@style/forget_item_layout">

                    <ImageView
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/forget_pass" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/icon_line_vertical" />

                    <EditText
                        android:id="@+id/forget_password"
                        android:hint="@string/forget_pass"
                        android:inputType="textPassword"
                        style="@style/forget_edit" />

                    <ImageView
                        android:id="@+id/forget_show"
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/forget_pass_close" />
                </LinearLayout>


                <Button
                    android:id="@+id/forget"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="@dimen/login_space"
                    android:background="@mipmap/icon_button_bg_green"
                    android:text="@string/commit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>